NetBSD Problem Report #40391

From reed@reedmedia.net  Wed Jan 14 02:03:44 2009
Return-Path: <reed@reedmedia.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 219A263B884
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 14 Jan 2009 02:03:44 +0000 (UTC)
Message-Id: <2152-1231898625@reedmedia.net>
Date: Tue, 13 Jan 2009 20:03:45 -0600
From: reed@reedmedia.net
Reply-To: reed@reedmedia.net
To: gnats-bugs@gnats.NetBSD.org
Subject: bogus error with usermod -g =uid
X-Send-Pr-Version: 3.95

>Number:         40391
>Category:       bin
>Synopsis:       bogus error with usermod -g =uid
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Jan 14 02:05:00 +0000 2009
>Closed-Date:    Sun Nov 15 02:33:54 +0000 2009
>Last-Modified:  Sun Nov 15 02:33:54 +0000 2009
>Originator:     reed@reedmedia.net
>Release:        NetBSD 5.0_BETA
>Organization:
  Jeremy C. Reed
>Environment:


Architecture: x86_64
Machine: amd64
>Description:
wrong error, wrong behaviour?

$ sudo usermod -g =uid adrion
usermod: Can't modify user `adrion': gid 0 is already in use

The error doesn't make sense.

>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: Mike Pelley <mike@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40391 CVS commit: src/usr.sbin/user
Date: Fri, 20 Mar 2009 02:53:47 +0000

 Module Name:	src
 Committed By:	mike
 Date:		Fri Mar 20 02:53:47 UTC 2009

 Modified Files:
 	src/usr.sbin/user: user.c

 Log Message:
 Fix check for duplicate gid when '-g =uid' is specified to usermod.

 Closes PR bin/40391


 To generate a diff of this commit:
 cvs rdiff -u -r1.122 -r1.123 src/usr.sbin/user/user.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: mike@NetBSD.org
State-Changed-When: Fri, 20 Mar 2009 02:59:25 +0000
State-Changed-Why:
Fixed in version 1.123 of user.c



State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 15 Nov 2009 02:33:54 +0000
State-Changed-Why:
fixed in march, no feedback is good feedback


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.