Fix check for duplicate gid when '-g =uid' is specified to usermod.

Closes PR bin/40391